--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <title>Document</title>
+  <title>Alvaro Sena's Store</title>
 </head>
 <body>
-  <header class="header-container">
+  <header id="main-header" class="header-container">
     <div class="header-content">
       <nav>
         <svg width="52" height="37" viewBox="0 0 52 37" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,16 +19,16 @@
 
         <ul>
           <li>
-            <a href="">HOMEM</a>
+            <a href="#home">INÍCIO</a>
           </li>
           <li>
-            <a href="">MULHER</a>
+            <a href="#shop">SHOP</a>
           </li>
           <li>
-            <a href="">CRIANÇA</a>
+            <a href="">SOBRE</a>
           </li>
           <li>
-            <a href="">CUSTOMIZAR</a>
+            <a href="">CONTATO</a>
           </li>
         </ul>
 
@@ -49,29 +49,41 @@
   </header>
 
   <main>
-    <section class="section-d-grid">
-      <div class="container">
-        <div class="product-data">
-          <div class="heading">
-          <h1 class="title">
-            Tênis 
-            <br> 
-            Esportivo 
-            <br> Para Corrida <br>
-            Top
-          </h1>
-          <p class="subtitle">Esse tênis tem o intuito de te deixar ainda mais fitness, focado, e musculoso</p>
-        </div>
-        <span class="product-price">R$ 298,99</span>
-        <button class="btn-purchase">
-          COMPRAR
-        </button>
-        </div>
+    <section id="home" class="container">
+      <div class="product-info">
+        <h1 class="heading">
+          Tênis <br>
+          Esportivo <br>
+          Para Corrida <br>
+          Top
+        </h1>
+        <p class="description">
+          Esse tênis tem o intuito de te deixar ainda mais fitness, focado, e musculoso
+        </p>
+        <span class="price">R$ 238,99</span>
+        <button class="btn-purchase">COMPRAR</button>
       </div>
-      <aside>
-        <img class="product-img" src="./assets/shoe.png" alt="Tenis Esportivo">
-      </aside>
+
+      <div class="box-bg-gray">
+        <img src="./assets/shoe.png" alt="">
+      </div>
     </section>
+
+    <section id="shop" class="container">
+      <h1>shop</h1>
+    </section>
+
   </main>
+
+  <script>
+    window.addEventListener('scroll', function() {
+        var header = document.getElementById('main-header');
+        if (window.scrollY > 0) {
+            header.classList.add('scrolled');
+        } else {
+            header.classList.remove('scrolled');
+        }
+    });
+  </script>
 </body>
 </html>
