add shop section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,57 @@
     </section>
 
     <section id="shop" class="container">
-      <h1>shop</h1>
+      <h1 class="shop-heading">SHOP</h1>
+
+      <div class="d-grid">
+        <div id="card">
+          <img src="./assets/product.png" alt="">
+          <div class="product-data">
+            <span class="product-title">Tênis X220</span>
+            <p class="product-description">
+              Tênis para corrida e exercício físico
+            </p>
+            <span class="product-price">R$ 238,99</span>
+          </div>
+          <button class="btn-purchase small">COMPRAR</button>
+        </div>
+
+        <div id="card">
+          <img src="./assets/product.png" alt="">
+          <div class="product-data">
+            <span class="product-title">Tênis X220</span>
+            <p class="product-description">
+              Tênis para corrida e exercício físico
+            </p>
+            <span class="product-price">R$ 238,99</span>
+          </div>
+          <button class="btn-purchase small">COMPRAR</button>
+        </div>
+
+        <div id="card">
+          <img src="./assets/product.png" alt="">
+          <div class="product-data">
+            <span class="product-title">Tênis X220</span>
+            <p class="product-description">
+              Tênis para corrida e exercício físico
+            </p>
+            <span class="product-price">R$ 238,99</span>
+          </div>
+          <button class="btn-purchase small">COMPRAR</button>
+        </div>
+
+        <div id="card">
+          <img src="./assets/product.png" alt="">
+          <div class="product-data">
+            <span class="product-title">Tênis X220</span>
+            <p class="product-description">
+              Tênis para corrida e exercício físico
+            </p>
+            <span class="product-price">R$ 238,99</span>
+          </div>
+          <button class="btn-purchase small">COMPRAR</button>
+        </div>
+      </div>
     </section>
 
   </main>
