add about section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#shop">SHOP</a>
           </li>
           <li>
-            <a href="">SOBRE</a>
+            <a href="#about">SOBRE</a>
           </li>
           <li>
             <a href="">CONTATO</a>
@@ -70,7 +70,7 @@
     </section>
 
     <section id="shop" class="container">
-      <h1 class="shop-heading">SHOP</h1>
+      <h1 class="section-heading">SHOP</h1>
 
       <div class="d-grid">
         <div id="card">
@@ -120,6 +120,15 @@
           </div>
           <button class="btn-purchase small">COMPRAR</button>
         </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="container">
+        <h1 class="section-heading">SOBRE NÓS</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus deserunt vel, iusto sunt cumque! Ut animi, natus officiis mollitia atque veritatis illo aliquam quas neque harum aut, a tempora.
+        </p>
       </div>
     </section>
 
