add footer (contact us section)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#about">SOBRE</a>
           </li>
           <li>
-            <a href="">CONTATO</a>
+            <a href="#contact-us">CONTATO</a>
           </li>
         </ul>
 
@@ -132,6 +132,30 @@
       </div>
     </section>
 
+    <footer id="contact-us">
+      <div class="contact-us-content">
+        <ul>
+          <li>
+            <a href="">FACEBOOK</a>
+          </li>
+          <li>
+            <a href="">INSTAGRAM</a>
+          </li>
+          <li>
+            <a href="">YOUTUBE</a>
+          </li>
+          <li>
+            <a href="">TWITTER/X</a>
+          </li>
+        </ul>
+        <button class="btn-contact-us">
+          ENTRAR EM CONTATO 
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3 13H17.586L12.293 18.293L13.707 19.707L21.414 12L13.707 4.29303L12.293 5.70703L17.586 11H3V13Z" fill="white"/>
+          </svg>
+        </button>
+      </div>
+    </footer>
   </main>
 
   <script>
