--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
       </div>
 
       <div class="box-bg-gray">
-        <img src="./assets/shoe.png" alt="">
+        <img src="./assets/shoe.png" alt="Shoe Image">
       </div>
     </section>
 
     <section id="shop" class="container">
       <h1 class="section-heading">SHOP</h1>
 
-      <div class="d-grid">
-        <div id="card">
-          <img src="./assets/product.png" alt="">
+      <article class="article-d-grid">
+        <article id="card">
+          <img src="./assets/product.png" alt="Shoe Image">
           <div class="product-data">
             <span class="product-title">Tênis X220</span>
             <p class="product-description">
@@ -82,11 +82,11 @@
             </p>
             <span class="product-price">R$ 238,99</span>
           </div>
-          <button class="btn-purchase small">COMPRAR</button>
-        </div>
+          <button class="btn-purchase small">ADICIONAR AO CARRINHO</button>
+        </article>
 
-        <div id="card">
-          <img src="./assets/product.png" alt="">
+        <article id="card">
+          <img src="./assets/product.png" alt="Shoe Image">
           <div class="product-data">
             <span class="product-title">Tênis X220</span>
             <p class="product-description">
@@ -94,11 +94,11 @@
             </p>
             <span class="product-price">R$ 238,99</span>
           </div>
-          <button class="btn-purchase small">COMPRAR</button>
-        </div>
+          <button class="btn-purchase small">ADICIONAR AO CARRINHO</button>
+        </article>
 
-        <div id="card">
-          <img src="./assets/product.png" alt="">
+        <article id="card">
+          <img src="./assets/product.png" alt="Shoe Image">
           <div class="product-data">
             <span class="product-title">Tênis X220</span>
             <p class="product-description">
@@ -106,11 +106,11 @@
             </p>
             <span class="product-price">R$ 238,99</span>
           </div>
-          <button class="btn-purchase small">COMPRAR</button>
-        </div>
+          <button class="btn-purchase small">ADICIONAR AO CARRINHO</button>
+        </article>
 
-        <div id="card">
-          <img src="./assets/product.png" alt="">
+        <article id="card">
+          <img src="./assets/product.png" alt="Shoe Image">
           <div class="product-data">
             <span class="product-title">Tênis X220</span>
             <p class="product-description">
@@ -118,45 +118,66 @@
             </p>
             <span class="product-price">R$ 238,99</span>
           </div>
-          <button class="btn-purchase small">COMPRAR</button>
+          <button class="btn-purchase small">ADICIONAR AO CARRINHO</button>
+        </article>
+      </article>
+
+      <aside>
+        <div class="promo-offer">
+          <img src="./assets/promo-offer-banner-2.jpg" alt="Special Offer">
+          <p class="promo-offer-description">Ganhe 20% de desconto!</p>
+          <button class="btn-shop-now">
+            COMPRAR AGORA!
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 13H17.586L12.293 18.293L13.707 19.707L21.414 12L13.707 4.29303L12.293 5.70703L17.586 11H3V13Z" fill="white"/>
+            </svg>
+          </button>
         </div>
-      </div>
+      </aside>
     </section>
 
     <section id="about">
       <div class="container">
-        <h1 class="section-heading">SOBRE NÓS</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus deserunt vel, iusto sunt cumque! Ut animi, natus officiis mollitia atque veritatis illo aliquam quas neque harum aut, a tempora.
-        </p>
+        <div class="about-us-d-flex">
+          <div>
+            <h1 class="section-heading">SOBRE NÓS</h1>
+            <p class="about-us-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores temporibus deserunt vel, iusto sunt cumque! Ut animi, natus officiis mollitia atque veritatis illo aliquam quas neque harum aut, a tempora.
+            </p>
+          </div>
+          <figure>
+            <img src="./assets/race-sneaker.jpg" alt="Race Sneaker">
+            <figcaption>Tênis de corrida</figcaption>
+          </figure>
+        </div>
       </div>
     </section>
-
-    <footer id="contact-us">
-      <div class="contact-us-content">
-        <ul>
-          <li>
-            <a href="">FACEBOOK</a>
-          </li>
-          <li>
-            <a href="">INSTAGRAM</a>
-          </li>
-          <li>
-            <a href="">YOUTUBE</a>
-          </li>
-          <li>
-            <a href="">TWITTER/X</a>
-          </li>
-        </ul>
-        <button class="btn-contact-us">
-          ENTRAR EM CONTATO 
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M3 13H17.586L12.293 18.293L13.707 19.707L21.414 12L13.707 4.29303L12.293 5.70703L17.586 11H3V13Z" fill="white"/>
-          </svg>
-        </button>
-      </div>
-    </footer>
   </main>
+
+  <footer id="contact-us">
+    <div class="contact-us-content">
+      <ul>
+        <li>
+          <a href="">FACEBOOK</a>
+        </li>
+        <li>
+          <a href="">INSTAGRAM</a>
+        </li>
+        <li>
+          <a href="">YOUTUBE</a>
+        </li>
+        <li>
+          <a href="">TWITTER/X</a>
+        </li>
+      </ul>
+      <button class="btn-contact-us">
+        ENTRAR EM CONTATO 
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M3 13H17.586L12.293 18.293L13.707 19.707L21.414 12L13.707 4.29303L12.293 5.70703L17.586 11H3V13Z" fill="white"/>
+        </svg>
+      </button>
+    </div>
+  </footer>
 
   <script>
     window.addEventListener('scroll', function() {
